--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
+    "date-fns": "^1.29.0",
     "eslint": "^4.13.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "^1.8.0",
