--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   "dependencies": {
     "dotenv-webpack": "^1.5.4",
     "react-redux": "^5.0.6",
+    "react-transition-group": "^2.2.1",
     "redux": "^3.7.2"
   }
 }
