--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
     },
     "rules": {
         "no-use-before-define": 0,
-        "max-len": ["error", 80, 2, {
+        "max-len": ["warn", 100, 2, {
             "ignoreUrls": true,
             "ignoreComments": false,
             "ignoreRegExpLiterals": true,
