--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   },
   "dependencies": {
     "dotenv-webpack": "^1.5.4",
+    "lodash.debounce": "^4.0.8",
     "react-redux": "^5.0.6",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2"
