--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "browserslist": [
     "last 1 versions",
-    "not Explorer 11"
+    "not ie <= 11"
   ],
   "devDependencies": {
     "autoprefixer": "^8.0.0",
