--- a/package.json
+++ b/package.json
@@ -37,14 +37,18 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^2.29.0",
     "jest": "^22.4.3",
+    "lodash.debounce": "^4.0.8",
     "node-sass": "^4.8.3",
     "postcss-loader": "^2.1.3",
     "postcss-normalize": "^4.0.0",
     "push-dir": "^0.4.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.3.1",
+    "react-transition-group": "^2.3.0",
+    "redux": "^3.7.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "svg-sprite-loader": "^3.7.3",
@@ -68,11 +72,5 @@
     "tdd": "yarn test -- --watch",
     "webpack": "webpack --env.development --display-optimization-bailout",
     "start": "yarn dev"
-  },
-  "dependencies": {
-    "lodash.debounce": "^4.0.8",
-    "react-redux": "^5.0.6",
-    "react-transition-group": "^2.3.0",
-    "redux": "^3.7.2"
   }
 }
